Renamed files and classes to PascalCase, and first implemetation of JUnit